Cache traversal missing large entries https://bugs.webkit.org/show_bug.cgi?id=142601

Reviewed by Andreas Kling.

When traversing cache entries we only read the header data from disk. This didn't work
correctly for entries larger than the read size.

* NetworkProcess/cache/NetworkCacheIOChannelCocoa.mm:
(WebKit::NetworkCache::IOChannel::read):

    Partial reads only receive one callback with 'done' set to true.
    Ensure we actually return data in this case.

* NetworkProcess/cache/NetworkCacheStorage.cpp:
(WebKit::NetworkCache::decodeEntryHeader):

    Add some logging.



Canonical link: https://commits.webkit.org/160641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181424 268f45cc-cd09-0410-ab3c-d52691b4dbfc